# optionalize

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
examples/: Makefile  README  example.opt
man/: optionalize.1
src/: Makefile  Makefile.am  Makefile.in  optionalize  optionalize.c
