AC_INIT([optionalize], [0.1.0])
AC_CONFIG_SRCDIR([src/optionalize.c])
AM_INIT_AUTOMAKE

AC_CHECK_HEADERS
AC_CHECK_HEADER_STDBOOL

INTI_REQUIRED_VERSION=1.0.7
#PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_PROG_CXX
AC_PROG_CC([gcc cl cc])

AC_OUTPUT(Makefile src/Makefile man/Makefile)
AC_PREFIX_DEFAULT(/usr)
